--- a/statusbar/build.gradle
+++ b/statusbar/build.gradle
@@ -34,6 +34,10 @@ android {
     }
 }
 
+dependencies {
+    implementation 'androidx.core:core-ktx:1.7.0'
+}
+
 afterEvaluate {
     publishing {
         publications {
